# LRAMM_GPU

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run.sh
matrix/: CMakeLists.txt  cusolver_connector.cuh  cutlass_gemm_op.cu  cutlass_gemm_op.cuh  fuse_tensor.cuh  gen_matrix.cu  gen_matrix.cuh  get_opsPerf.cu  get_opsPerf.cuh  lrxigemm.cuh  operator_matrix.cu  operator_matrix.cuh  print_matrix.cu  sketch_op.cuh
matrix/cublas/: cublas_lib.cuh  cublas_utils.h
matrix/test/: CMakeLists.txt  config_test.cu  cublas_lib_test.cu  cusolver_test.cu  cutlass_gemm_test.cu  lrxigemm_test.cu  operator_matrix_test.cu  sketch_op_test.cu  tt
